--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
     "dev:tailwind": "concurrently \"tailwindcss --input input.css --output tailwind.css --no-autoprefixer --watch\" \"tailwind-rn --watch\""
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.11",
     "expo-status-bar": "~1.4.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-animatable": "^1.3.3",
-    "react-native-maps": "^1.6.0",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-maps": "1.3.2",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
