--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.3.6",
     "expo": "~48.0.11",
     "expo-status-bar": "~1.4.4",
     "nativewind": "^2.0.11",
@@ -32,6 +33,7 @@
     "@babel/core": "^7.20.0",
     "concurrently": "^8.0.1",
     "postcss": "^8.4.23",
+    "react-native-dotenv": "^3.4.8",
     "tailwindcss": "^3.3.1"
   },
   "private": true
