--- a/front-end/app.json
+++ b/front-end/app.json
@@ -4,12 +4,10 @@
     "slug": "firstApp",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/restaurants.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/restaurants.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "image": "./assets/Splash.png",
+      "resizeMode": "cover"
     },
     "assetBundlePatterns": [
       "**/*"
